<resources>
    <string name="app_name">Espitha</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="film_genres">Film genres</string>
    <string name="website">https://en.wikipedia.org/wiki/Film</string>
    <string name="date">22 Oct 2015</string>
    <string name="data">I have a RecyclerView, when RecyclerView item clicked, want to open a popup window which contains another RecyclerView. It is almost done, but in popup window, cardviews dont appear. I cant figure out why, can any one help?</string>
    <string name="selected_item">Selected item</string>

    <string-array name="film_genre">
        <item>Home</item>
        <item>Products</item>
        <item>Drama</item>
        <item>Musical</item>
        <item>Thriller</item>
    </string-array>

    <string-array name="my_items">
        <item>Dummy Item 1</item>
        <item>Dummy Item 2</item>
        <item>Dummy Item 3</item>
        <item>Dummy Item 4</item>
        <item>Dummy Item 5</item>
        <item>Dummy Item 6</item>
        <item>Dummy Item 7</item>
        <item>Dummy Item 8</item>
        <item>Dummy Item 9</item>
        <item>Dummy Item 10</item>
        <item>Dummy Item 11</item>
        <item>Dummy Item 12</item>
        <item>Dummy Item 13</item>
        <item>Dummy Item 14</item>
    </string-array>

    <string-array name="age">
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth(dd/mm/yyyy)</string>
    <string name="city">City</string>
    <string name="locality">Locality</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>

    <string-array name="actionFilms">
        <item>Furniture</item>

    </string-array>

    <string-array name="musicals">
        <item>Naughty Marietta (1935)</item>
        <item>Rose Marie (1936)</item>
        <item>Maytime (1937)</item>
        <item>Sweethearts (1938)</item>
        <item>Bitter Sweet (1940)</item>
        <item>New Moon (1940)</item>
        <item>I Married an Angel (1942)</item>
        <item>Lady Be Good (1941)</item>
        <item>Ship Ahoy (1942)</item>
        <item>Sensations of 1945 (1944)</item>
    </string-array>

    <string-array name="dramas">
        <item>Home of the Brave (1949)</item>
        <item>The Accused (1949)</item>
        <item>12 Angry Men (1957)</item>
        <item>Compulsion (1959)</item>
        <item>Inherit the Wind (1960)</item>
        <item>To Kill a Mockingbird (1962)</item>
        <item>Mrs. Miniver (1942)</item>
        <item>Since You Went Away (1944)</item>
        <item>The Champ (1931)</item>
        <item>Nashville (1975)</item>
    </string-array>

    <string-array name="thrillers">
        <item>Alien (1979)</item>
        <item>The French Connection (1971)</item>
        <item>High Noon (1952)</item>
        <item>Double Indemnity (1944)</item>
        <item>Safety Last (1923)</item>
        <item>The Lady From Shanghai (1948)</item>
        <item>The Third Man (1949)</item>
        <item>Rear Window (1954)</item>
        <item>The 39 Steps (1935)</item>
        <item>Shadow of a Doubt (1943)</item>
    </string-array>

    <string-array name="comedies">
        <item>Home</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">movie title</string>
    <string name="action_movies">Action</string>
    <string name="musical_movies">Musical</string>
    <string name="drama_movies">Drama</string>
    <string name="comedy_movies">Comedy</string>
    <string name="thriller_movies">Thriller</string>
    <string name="movie_genre">genre</string>
    <string name="login_caps">LOGIN</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="err_msg_email_no">Invalid Email/Mobile No</string>
    <string name="err_msg_enter_email">Enter Email</string>
    <string name="err_msg_enter_email_no">Enter valid Email/Mobile No</string>
    <string name="err_msg_enter_mobile_no">Enter Mobile Number</string>
    <string name="err_msg_enter_name">Enter Name</string>
    <string name="err_msg_enter_password">Enter valid Password</string>
    <string name="err_msg_valid_email">Enter Valid Email</string>
    <string name="err_msg_valid_mobile_no">Enter Valid Mobile Number</string>
    <string name="err_msg_valid_password">Password must be 6 or above characters</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="msg_forgot_password">Please wait processing…</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_login">Please wait validating credentials</string>
    <string name="msg_profile_loading">Profile Loading...</string>
    <string name="msg_signup">Registering...</string>
    <string name="msg_updating_profile">Profile Updating...</string>
    <string name="msg_verify_otp">Verifying OTP</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile_update">My Profile Update</string>
    <string name="name">Name</string>
    <string name="email_mobile_no">Email/Mobile No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_password">New Password</string>
    <string name="new_user">New User ?</string>
    <string name="new_user_text">New User?</string>
    <string name="old_password">Old Password</string>
    <string name="other">Other</string>
    <string name="otp_text">Please verify your OTP verification</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pin_code">Pin Code</string>
    <string name="promo_balance">Promo Balance :</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="shopping">Shopping</string>
    <string name="signup">Signup</string>
    <string name="signup_caps">SIGNUP</string>
    <string name="signup_text">New to ESPITHA? SIGNUP</string>
    <string name="successfully_password_sent">Successfully password sent to your mobile and email.</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="update">Update</string>
    <string name="verify">Verify</string>
    <string name="zero">0</string>
    <string name="food_drinks">Food &amp; Drinks</string>
    <string name="local_services">Local Services</string>
    <string name="changepassword">Change Password</string>
    <string name="profile">My Profile</string>

    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="image_button_content_description">Change state of section</string>
    <string name="title_otp">OTP Verification</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="progress_msg">progressing.....</string>
    <string name="sh_login">login</string>
    <string name="sh_logintoken">logintoken</string>
    <string name="search_rest">search</string>
    <string name="welcome">Honest Shoppie</string>

</resources>
