<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
    android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end">

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/rd_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rd_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rd_male"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rd_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rd_female"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_gender"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_gender"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_radius_red"
        android:drawablePadding="10dp"
        android:text="OK"
        android:textColor="#fff"
        android:textStyle="bold" />
</RelativeLayout>
