<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
    android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorSecondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backimage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_backspace_white_24dp" />

            <TextView
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:text="@string/login_caps"
                android:textColor="#fff"
                android:textSize="@dimen/header_font_size_extra_large"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@drawable/hslogo"
        android:layout_marginTop="50dp"
        android:gravity="center" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="LOGIN"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_grey600_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_account_grey600_24dp"
            android:hint="@string/email_mobile_no"></EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_passowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_eye_off_grey600_24dp"
            android:drawableLeft="@drawable/ic_lock_grey600_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:drawableRight="@drawable/ic_eye_off_grey600_24dp"
            android:drawableStart="@drawable/ic_lock_grey600_24dp"
            android:hint="@string/enter_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius_red"
        android:drawablePadding="10dp"
        android:text="@string/login_caps"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_size_heading_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

</LinearLayout>