<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorSecondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backimage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_backspace_white_24dp" />

            <TextView
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:text="@string/title_otp"
                android:textColor="#fff"
                android:textSize="@dimen/header_font_size_extra_large"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:id="@+id/forgot_password"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/otp_text"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent">

        <EditText
            android:drawableLeft="@drawable/ic_message_reply_text_grey600_24dp"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:drawableStart="@drawable/ic_message_reply_text_grey600_24dp"
            android:hint="@string/enter_otp"
            android:id="@+id/et_otp"
            android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@drawable/button_radius_red"
        android:id="@+id/btn_verify_otp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:text="@string/verify"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold" />
</LinearLayout>
</LinearLayout>