<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:background="@color/colorSecondary"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backimage"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_keyboard_backspace_white_24dp" />

            <TextView
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:id="@id/title"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:text="@string/signup"
                android:textColor="#fff"
                android:textSize="@dimen/header_font_size_extra_large"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/hslogo"
            android:layout_marginTop="50dp"
            android:gravity="center" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_caps"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_grey600_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@drawable/ic_account_grey600_24dp"
                android:hint="@string/name"
                android:singleLine="true"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_grey600_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@drawable/ic_email_grey600_24dp"
                android:hint="@string/email"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_cellphone_android_grey600_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@drawable/ic_cellphone_android_grey600_24dp"
                android:hint="@string/mobile_no"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_grey600_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@drawable/ic_lock_grey600_24dp"
                android:hint="@string/password"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_radius_red"
            android:text="@string/signup"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_extra_large"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
